[package]
name = "weld_core"
version = "0.1.0"
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]

[dependencies]
id_tree = "1.1.2"
gleam = "0.4.7"
servo-glutin = "0.11"
euclid = "0.15.1"
snowflake = "1.2"

[dependencies.webrender_api]
git = "https://github.com/servo/webrender"

[dependencies.webrender]
git = "https://github.com/servo/webrender"

[dependencies.yoga]
git = "https://github.com/bschwind/yoga-rs"
