[package]
name = "weld"
version = "0.1.0"
authors = ["Roy Jacobs <hello@royjacobs.org>"]

[dependencies]
gleam = "0.4.7"
servo-glutin = "0.11"

[dependencies.weld_core]
path = "../weld-core"

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"

[dependencies.webrender]
git = "https://github.com/servo/webrender"